[package]
name = "cli"
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data = { path = "../data" }
dotenvy = "0.15.7"
foresight = { path = "../foresight" }
hindsight-core = { path = "../hindsight-core" }
scanner = { path = "../scanner" }

anyhow = "1.0.71"
ctrlc = "3.4.1"
clap = {version = "4.3.11", features = ["derive"]}
ethers = {version = "2.0.7", features = ["ws"]}
tracing-subscriber = "0.3.17"
tokio = {version = "1.29.1", features = ["macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"]}
lazy_static = "1.4.0"
serde_json = "1.0.108"
