[package]
name = "hindsight_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ethers = "2.0.7"
mev-share-sse = {git = "https://github.com/paradigmxyz/mev-share-rs.git"}
rand = "0.8.5"
serde = "1.0.164"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
