[package]
edition = "2021"
name = "simulator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
colored = "2.0.4"
dotenvy = "0.15.7"
ethers = "2.0.7"
futures = "0.3.28"
revm = {version = "3.0.0", features = ["ethersdb", "serde", "std"]}
rusty-sando = {path = "./rusty-sando/bot"}
serde = "1.0.164"
serde_json = {version = "1.0.99", features = ["arbitrary_precision", "std", "preserve_order"]}
tokio = {version = "1.29.1", features = ["macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"]}
uniswap_v3_math = {path = "./uniswap-v3-math"}
