[package]
edition = "2021"
name = "hindsight"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-recursion = "1.0.4"
clap = {version = "4.3.11", features = ["derive"]}
colored = "2.0.4"
dotenvy = "0.15.7"
ethers = "2.0.7"
futures = "0.3.28"
mev-share-sse = {git = "https://github.com/zeroXbrock/mev-share-rs.git", branch = "optional-log-tx-fields"}
mongodb = {version = "2.6.0", features = ["tracing"]}
revm = {version = "3.0.0", features = ["ethersdb", "serde", "std"]}
rusty-sando = {path = "./rusty-sando/bot"}
serde = "1.0.164"
serde_json = {version = "1.0.99", features = ["arbitrary_precision", "std", "preserve_order"]}
tokio = {version = "1.29.1", features = ["macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uniswap_v3_math = {git = "https://github.com/0xKitsune/uniswap_v3_math"}
